c/src/test/resources/c/nec_inline_bnc/valid/ex9-3.ctrl
<controlFile>
  <sourceFile name="../ex9.c" id="1" />
  <run>
    <startPosition fileId="1" line="22" />
    <wayPoint fileId="1" line="30" />
    <wayPoint fileId="1" line="35" >
      <function funcName="test" >
        <wayPoint fileId="1" line="8" >
          <loop iterTimes="3" />
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="37" />
  </run>
</controlFile>