c/src/test/resources/c/nec_inline_bnc/invalid/ex20-1.ctrl
<controlFile>
  <sourceFile name="../ex20.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <wayPoint fileId="1" line="8" />
    <wayPoint fileId="1" line="15" >
      <loop iterTimes="1" />
    </wayPoint>
    <endPosition fileId="1" line="28" />
  </run>
</controlFile>